--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 main {
   width: 100%;
   height: 100vh;
-  background-color: #e0921d;
+  background-color: #c0ae94;
   display: flex;
   justify-content: center;
   align-items: center;
